--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,12 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+.text_uppercase {
+  text-transform: uppercase;
+}
+
+.row {
+  display: flex;
+  justify-content: center;
+}
