--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,12 @@
   box-sizing: border-box;
 }
 /* classi generali */
+
+body {
+  font-family: sans-serif;
+  font-size: 14px;
+}
+
 .text_uppercase {
   text-transform: uppercase;
 }
@@ -20,12 +26,24 @@
 .col {
   display: flex;
   flex-direction: column;
+  padding: 20px;
 }
 
 h1 {
   color: white;
+  padding: 25px 0;
 }
 
 .wrapper {
   background-color: #ca6048;
+}
+
+.form {
+  background-color: white;
+  width: 70%;
+  margin: 0 auto;
+}
+
+label {
+  text-align: center;
 }
