--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,10 @@ h1 {
   padding: 25px 0;
 }
 
+h2 {
+  font-size: 16px;
+}
+
 .wrapper {
   background-color: #ca6048;
 }
@@ -45,5 +49,19 @@ h1 {
 }
 
 label {
+  font-size: 16px;
+  color: #ca6048;
   text-align: center;
+  padding-bottom: 10px;
+  font-weight: bold;
+}
+
+input::placeholder {
+  text-align: center;
+}
+
+input {
+  border-radius: 5px;
+  border: 1px solid #ca6048;
+  padding: 3px 5px;
 }
