--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,8 @@ h2 {
   background-color: white;
   width: 70%;
   margin: 0 auto;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.6);
+  border-radius: 15px;
 }
 
 label {
@@ -73,9 +75,6 @@ select {
 }
 
 /* bottoni */
-.container_button {
-  text-align: center;
-}
 
 .btn {
   color: red;
@@ -83,4 +82,5 @@ select {
   background-color: lightgrey;
   padding: 4px;
   border-radius: 5px;
+  margin-bottom: 20px;
 }
