--- a/css/style.css
+++ b/css/style.css
@@ -120,3 +120,13 @@ td {
   color: white;
   background-color: #ca6048;
 }
+
+.hidden {
+  opacity: 0;
+  transition: 1s;
+}
+
+.show {
+  opacity: 1;
+  transition: 1s;
+}
