--- a/css/style.css
+++ b/css/style.css
@@ -139,3 +139,9 @@ input:focus {
 input:focus::placeholder {
   color: white;
 }
+
+select:focus {
+  background-color: #ca6048;
+  color: white;
+  
+}
